Add duration to RecyclerView

--- a/app/src/main/res/layout/fragment_mediaitem.xml
+++ b/app/src/main/res/layout/fragment_mediaitem.xml
@@ -70,17 +70,17 @@
         tools:text="Song Title" />
 
     <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/text_margin"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textAppearance="@style/TextAppearance.Uamp.Subtitle"
-        app:layout_constraintLeft_toLeftOf="@+id/title"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/center_guideline"
-        tools:text="Artist" />
+      android:id="@+id/subtitle"
+      android:layout_width="242dp"
+      android:layout_height="16dp"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:textAppearance="@style/TextAppearance.Uamp.Subtitle"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="@+id/title"
+      app:layout_constraintTop_toBottomOf="@+id/center_guideline"
+      app:layout_constraintVertical_bias="0.2"
+      tools:text="Artist"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/center_guideline"
@@ -88,5 +88,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
+    <TextView
+      android:id="@+id/duration"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="4dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/subtitle"
+      app:layout_constraintTop_toTopOf="@+id/center_guideline"
+      tools:text="Duration"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
