--- a/app/src/main/res/layout/fragment_nowplaying.xml
+++ b/app/src/main/res/layout/fragment_nowplaying.xml
@@ -46,7 +46,7 @@
       android:layout_marginEnd="8dp"
       android:background="@drawable/media_overlay_background"
       app:layout_constraintBottom_toBottomOf="@+id/albumbArt"
-      app:layout_constraintEnd_toEndOf="@+id/duration"
+      app:layout_constraintEnd_toEndOf="@+id/location"
       app:layout_constraintTop_toBottomOf="@id/divider"/>
 
     <ImageButton
