--- a/app/src/main/res/layout/fragment_mediaitem.xml
+++ b/app/src/main/res/layout/fragment_mediaitem.xml
@@ -60,10 +60,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
+        android:fontFamily="@font/quicksand_medium"
         android:maxLines="1"
         android:textAppearance="@style/TextAppearance.Uamp.Title"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/center_guideline"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/albumArt"
         app:layout_constraintRight_toRightOf="parent"
         tools:text="Song Title" />
@@ -95,6 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
